--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="build/main.bundle.css">
   </head>
   <body>
-  <div id="container">
+  <div id="app">
+    <script type="text/javascript" src="build/app.bundle.js" charset="utf-8"></script>
   </div>
   </body>
 </html>
