--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="build/main.bundle.css">
   </head>
   <body>
-  <div id="app">
+  <div id="app" class="container">
     <script type="text/javascript" src="build/app.bundle.js" charset="utf-8"></script>
   </div>
   </body>
