--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="build/main.bundle.css">
+    <link rel="stylesheet" href="build/vendor/font-awesome-4.7.0/css/font-awesome.min.css">
   </head>
   <body>
   <div id="app" class="container">
