add bulk add list items from csv functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="build/main.bundle.css">
     <link rel="stylesheet" href="build/vendor/font-awesome-4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="build/vendor/papaparse.min.js"></script>
   </head>
   <body>
   <div id="app" class="container">
